--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A user login/registration/logout system",
   "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node app/bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,22 +20,23 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "~1.17.1",
+    "connect-flash": "*",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
+    "ejs": "^2.5.6",
     "express": "~4.15.2",
+    "express-messages": "*",
+    "express-session": "*",
+    "express-validator": "*",
     "jade": "~1.11.0",
-    "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2",
     "mongodb": "*",
     "mongoose": "*",
-    "connect-flash": "*",
-    "express-validator": "*",
-    "express-session": "*",
-    "express-messages": "*",
+    "morgan": "~1.8.1",
+    "multer": "*",
     "passport": "*",
-    "passport-local": "*",
     "passport-http": "*",
-    "multer": "*"
+    "passport-local": "*",
+    "serve-favicon": "~2.4.2"
   },
   "bugs": {
     "url": "https://github.com/Pierre-D-G/User-Login-System/issues"
