--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "connect-flash": "*",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
-    "ejs": "^2.5.6",
-    "express": "~4.15.2",
+    "express": "^4.15.2",
+    "express-handlebars": "^3.0.0",
     "express-messages": "*",
     "express-session": "*",
     "express-validator": "*",
