--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-session": "*",
     "express-validator": "*",
     "jade": "~1.11.0",
+    "bcrypt": "~1.0.2",
     "mongodb": "*",
     "mongoose": "*",
     "morgan": "~1.8.1",
