Changed encryption system to bcryptjs since bcrypt-nodejs is deprecated

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Gamil Pierre",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "~1.17.1",
     "connect-flash": "*",
     "cookie-parser": "~1.4.3",
@@ -29,11 +30,9 @@
     "express-session": "*",
     "express-validator": "*",
     "jade": "~1.11.0",
-    "bcrypt": "~1.0.2",
     "mongodb": "*",
     "mongoose": "*",
     "morgan": "~1.8.1",
-    "multer": "*",
     "passport": "*",
     "passport-http": "*",
     "passport-local": "*",
